<resources>
    <!--App Settings-->
    <string name="app_name">MobilePay</string>
    <string name="action_settings">Settings</string>

    <!--Mobile Screen-->
    <string name="mobile_title">(Please provide your mobile number to progress registration)</string>
    <string name="mobile_number_hint">Mobile</string>
    <string name="mobile_number_missing_error">Mobile number is required</string>
    <string name="mobile_number_length_error">Invalid mobile number</string>
    <string name="mobile_submit_heading">In Progress</string>
    <string name="mobile_submit_message">Validating...</string>

    <!--OTP Screen-->
    <string name="otp_title">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="otp_number_hint">Enter OTP</string>
    <string name="otp_number_hint_msg">OTP Number</string>
    <string name="otp_submit_button_text">Submit</string>
    <string name="otp_or">(or)</string>
    <string name="otp_resend_button_text">Re-Send OTP</string>
    <string name="otp_number_error">OTP number is required</string>
    <string name="otp_submit_heading">@string/mobile_submit_heading</string>
    <string name="otp_submit_message">Validating...</string>
    <string name="error">Error</string>


    <!--Registration-->
    <string name="reg_name_hint">Name</string>
    <string name="reg_email_hint">Email</string>
    <string name="reg_mpin_hint">mPIN (Must be 6 digits)</string>
    <string name="reg_rempin_hint">Re-Enter mPIN</string>
    <string name="reg_submit_heading">@string/mobile_submit_heading</string>
    <string name="reg_submit_message">Loading...</string>

    <string name="reg_name_error">Name is required</string>
    <string name="reg_email_error">Email is required</string>
    <string name="reg_email_not_valid_error">Invalid Email</string>
    <string name="reg_pass_error">Invalid mPIN</string>
    <string name="reg_pass_len_error">Enter a 6 digit number</string>
    <string name="reg_re_pass_error">Invalid mPIN</string>
    <string name="reg_re_pass_not_same_error">mPIN and retype mPIN are mismatched</string>

    <!--Login-->
    <string name="login_enter_mpin">Enter your mPIN</string>
    <string name="login_forget_mpin">Forget mPIN</string>
    <string name="login_submit_heading">@string/mobile_submit_heading</string>
    <string name="login_submit_message">Authenticating...</string>
    <string name="invalid_pin">Invalid login Id</string>

    <!--Home Screen-->
    <string name="exit_double_click">Please click BACK again to exit</string>

    <!--Shopping Bag-->
    <string name="shopping_bag_empty">Your Bucket is Empty. Purchase in shop and pay here</string>

    <!--Add Delivery Address-->
    <string name="add_delivery_address_name_error">Name is required</string>
    <string name="add_delivery_address_mobile_error">Mobile number is required</string>
    <string name="add_delivery_address_mobile_number_error">Invalid mobile number</string>
    <string name="add_delivery_address_street_error">Street Name is required</string>
    <string name="add_delivery_address_city_error">City is required</string>
    <string name="add_delivery_address_postal_error">Postal code is required</string>

    <!-- Delivery Options -->
    <string name="delivery_collection_counter">Collection Counter</string>
    <string name="delivery_home">Home</string>
    <string name="delivery_none">None</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_purchase">PurchaseActivity</string>
    <string name="title_activity_new_savecard">NewCardActivity</string>

    <string name="google_cloud_id">207427538099</string>
    <!-- //AIzaSyBuFk_OddMviHfKLK7eilEw3P5v0KEG7tc -->
    <!-- Account Details -->

    <string name="auth_type">co.in.mobilepay.sync</string>
    <string name="content_authority">co.in.mobilepay.sync</string>

    <string name="bank_prompt">Choose a Country</string>
    <string-array name="bank_list">
        <item>ICICI Bank</item>
        <item>SBI Bank</item>
        <item>HDFC Bank</item>
        <item>Indian Bank</item>
        <item>City Bank</item>
        <item>Kotak Bank</item>
        <item>Ing Bank</item>
        <item>KVB Bank</item>
    </string-array>

    <string name="indian_rupee_symbol">\u20B9</string>

    <string-array name="nav_menu">
        <item>Account</item>
        <item>Support</item>
        <item>Terms of service</item>
        <item>About</item>
        <item>Rate the App</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="alert_decline_feedback_one">Changed my Mind</string>
    <string name="alert_decline_feedback_two">Expensive</string>
    <string name="alert_decline_feedback_three">I don\'t like this purchased item</string>
    <string name="alert_decline_feedback_four">Not me</string>





    <string name="rate_no">Rate it</string>
    <string name="rate_bad">Bad</string>
    <string name="rate_avg">Avg</string>
    <string name="rate_ok">Ok</string>
    <string name="rate_gud">Good</string>
    <string name="rate_excellence">Excellence</string>

    <string name="otp_resend">You will receive the message shortly</string>

    <string name="purchase_list_empty">Your Bucket is Empty. Purchase in shop and pay here.</string>







    <!--permissions-->
    <string name="sms_permission">Please authorize the App to read the OTP automatically</string>
    <string name="sms_permission_denied">Unable to read SMS Number</string>
    <string name="call_permission">Please provide go-ahead, you could place calls direct to seller</string>
    <string name="call_permission_denied">Unable to make call. Please enable call permission</string>

    <!-- Screen permission button-->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!--Common Message-->
    <string name="no_network">Check your connection.</string>
    <string name="internal_error">OOPS! Something went wrong. Pls try again later</string>
    <string name="no_network_heading">No Network</string>
    <string name="current_tab">currentTab</string>
    <string name="login_error">OOPS! You are logged on Another device.Please login again or continue that device</string>
</resources>



