<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mobile_message"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/black"
        android:text="@string/mobile_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mobile_main_layout"
        android:layout_below="@+id/mobile_message"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/mobile_number"
            android:inputType="number"
            android:singleLine="true"
            android:imeOptions="actionSend"
            android:maxLength="10"
            android:hint="@string/mobile_number_hint"/>
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    <Button
        android:id="@+id/mobile_submit"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/mobile_main_layout"
        android:enabled="true"
        android:text="@string/otp_submit_button_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="2dp"
        android:layout_marginTop="20dp" />


</RelativeLayout>
